--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,18 +3,21 @@ authors = ["seria <seria.ati@gmail.com>"]
 description = "PTT 爬蟲"
 license = "GPL-3.0-only"
 name = "ptt-scrape"
+package-mode = false
 readme = "README.md"
 version = "0.1.0"
-package-mode = false
 
 [tool.poetry.dependencies]
 beautifulsoup4 = "^4.12.3"
-lxml = "^5.3.0"
-python = "^3.11"
-requests = "^2.32.3"
 loguru = "^0.7.2"
+lxml = "^5.3.0"
 pydantic = "^2.8.2"
+python = "^3.11"
 python-dotenv = "^1.0.1"
+requests = "^2.32.3"
+
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.7"
