--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "loguru>=0.7.3",
     "lxml>=5.3.1",
     "pydantic>=2.10.6",
+    "python-dotenv>=1.1.0",
     "requests>=2.32.3",
 ]
 authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
