--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.10.6",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
+    "tenacity>=9.1.2",
 ]
 authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
 license = { file = "LICENSE" }
